--- a/src/ccloadview_base.ui
+++ b/src/ccloadview_base.ui
@@ -61,13 +61,13 @@
                  <item>
                   <widget class="QGroupBox" name="groupBox_3">
                    <property name="title">
-                    <string>Check CC Led</string>
+                    <string>Port Control</string>
                    </property>
                    <layout class="QGridLayout" name="gridLayout_8">
                     <item row="0" column="0">
                      <widget class="QPushButton" name="flashCC">
                       <property name="text">
-                       <string>Flash CC</string>
+                       <string>Write Port</string>
                       </property>
                      </widget>
                     </item>
@@ -246,7 +246,7 @@
               </layout>
              </item>
              <item>
-              <widget class="QTextBrowser" name="console">
+              <widget class="QPlainTextEdit" name="console">
                <property name="sizePolicy">
                 <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
                  <horstretch>0</horstretch>
@@ -492,6 +492,16 @@
                    <widget class="QCheckBox" name="autoIncMAC">
                     <property name="text">
                      <string>Auto Inc MAC</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item row="7" column="0">
+                   <widget class="QPushButton" name="lock">
+                    <property name="enabled">
+                     <bool>false</bool>
+                    </property>
+                    <property name="text">
+                     <string>Lock</string>
                     </property>
                    </widget>
                   </item>
@@ -1299,20 +1309,6 @@
                   </property>
                  </widget>
                 </item>
-                <item row="3" column="0">
-                 <widget class="QLabel" name="label_14">
-                  <property name="text">
-                   <string>DHP0:</string>
-                  </property>
-                 </widget>
-                </item>
-                <item row="4" column="0">
-                 <widget class="QLabel" name="label_17">
-                  <property name="text">
-                   <string>DPH1:</string>
-                  </property>
-                 </widget>
-                </item>
                 <item row="2" column="2" colspan="3">
                  <widget class="QLabel" name="REG_PSW">
                   <property name="minimumSize">
@@ -1349,6 +1345,20 @@
                   </property>
                   <property name="text">
                    <string/>
+                  </property>
+                 </widget>
+                </item>
+                <item row="3" column="0" colspan="2">
+                 <widget class="QLabel" name="label_14">
+                  <property name="text">
+                   <string>DPH0:</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="4" column="0" colspan="2">
+                 <widget class="QLabel" name="label_17">
+                  <property name="text">
+                   <string>DPH1:</string>
                   </property>
                  </widget>
                 </item>
@@ -1439,8 +1449,6 @@
         </layout>
        </item>
       </layout>
-      <zorder>verticalSpacer_3</zorder>
-      <zorder>horizontalSpacer_3</zorder>
      </widget>
     </widget>
    </item>
